sm8250-common: Enable display burn-in-protection in Ambient Display
Signed-off-by: dawfukfr <dawfukfr@gmail.com>
Signed-off-by: Devang Chaudhary <devangsingh369@gmail.com>

--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -74,4 +74,7 @@
 
     <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
     <integer name="config_screenRecorderMaxFramerate">120</integer>
+
+    <!-- If true, the display will be shifted around in ambient mode. -->
+    <bool name="config_enableBurnInProtection">true</bool>
 </resources>
