--- a/overlay/CarrierConfigResCommon/res/xml/vendor.xml
+++ b/overlay/CarrierConfigResCommon/res/xml/vendor.xml
@@ -4015,4 +4015,11 @@
             <item value="29501" />
         </string-array>
     </carrier_config>
+
+    <!-- PA: Allow configuring WFC on Jio, enable Vo5G -->
+    <carrier_config mcc="405" mnc="840,854,855,856,857,858,859,860,861,862,863,864,865,866,867,868,869,870,871,872,873,874">
+        <boolean name="editable_wfc_mode_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
+    </carrier_config>
+    
 </carrier_config_list>
